--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -1199,7 +1199,7 @@ iframe {
 
 .venom-button .venom-button-popup .ewIAEB {
 	background-color: #0b141a !important;
-	background-image: url(https://raw.githubusercontent.com/rauldipeas/rauldipeas.surge.sh/main/public/assets/images/whatsapp-background.png);
+	background-image: url(https://raw.githubusercontent.com/rauldipeas/rauldipeas.surge.sh/main/public/assets/images/whatsapp-background.jpeg);
 }
 
 .venom-button .venom-button-popup .cWUfUj .dSUAOZ {
