--- a/blog/_sass/addon/commons.scss
+++ b/blog/_sass/addon/commons.scss
@@ -720,7 +720,8 @@ $sidebar-display: 'sidebar-display';
   overflow-y: auto;
   width: $sidebar-width;
   z-index: 99;
-  background: var(--sidebar-bg);
+  /*background: var(--sidebar-bg);*/
+  background-image: url(https://rauldipeas.surge.sh/assets/images/backgrounds/street-1.gif);
 
   /* Hide scrollbar for Chrome, Safari and Opera */
   &::-webkit-scrollbar {
