--- a/blog/_sass/colors/dark-typography.scss
+++ b/blog/_sass/colors/dark-typography.scss
@@ -68,9 +68,9 @@
   --btn-share-color: #6c757d;
   --btn-share-hover-color: #bfc1ca;
   --relate-post-date: var(--text-muted-color);
-  --card-bg: #101010;
-  --card-hovor-bg: #3a3a3a;
-  --card-border-color: rgb(53, 53, 60);
+  --card-bg: rgb(10, 10, 10);
+  --card-hovor-bg: #101010;
+  --card-border-color: rgb(10, 10, 10);
   --card-box-shadow: var(--main-bg);
   --kbd-wrap-color: #6a6a6a;
   --kbd-text-color: #d3d3d3;
