--- a/blog/_sass/addon/commons.scss
+++ b/blog/_sass/addon/commons.scss
@@ -721,7 +721,7 @@ $sidebar-display: 'sidebar-display';
   width: $sidebar-width;
   z-index: 99;
   /*background: var(--sidebar-bg);*/
-  background-image: url(https://rauldipeas.surge.sh/assets/images/backgrounds/street-1.gif);
+  background-image: url(https://rauldipeas.surge.sh/assets/images/backgrounds/street-1.gif) rgba(0,0,0,0.5);
 
   /* Hide scrollbar for Chrome, Safari and Opera */
   &::-webkit-scrollbar {
