--- a/blog/_includes/comments/giscus.html
+++ b/blog/_includes/comments/giscus.html
@@ -4,7 +4,7 @@
     const origin = "https://giscus.app";
     const iframe = "iframe.giscus-frame";
     const lightTheme = "light";
-    const darkTheme = "dark_high_contrast";
+    const darkTheme = "dark";
     let initTheme = lightTheme;
 
     if ($("html[data-mode=dark]").length > 0
