--- a/blog/_layouts/default.html
+++ b/blog/_layouts/default.html
@@ -66,6 +66,10 @@ layout: compress
 
     {% include js-selector.html %}
 
+    {% include crisp.html %}
+    
+    {% include counter.html %}
+
   </body>
 
 </html>
