--- a/blog/_sass/addon/commons.scss
+++ b/blog/_sass/addon/commons.scss
@@ -722,7 +722,7 @@ $sidebar-display: 'sidebar-display';
   width: $sidebar-width;
   z-index: 99;
   /*background: var(--sidebar-bg);*/
-  background: url(https://4kwallpapers.com/images/wallpapers/3d-background-squares-purple-light-metal-aesthetic-3840x2160-2700.jpg);
+  background: url(https://www.hdwallpapers.in/download/purple_glitter_stones_background_hd_purple-1920x1080.jpg);
 
   /* Hide scrollbar for Chrome, Safari and Opera */
   &::-webkit-scrollbar {
