--- a/blog/_sass/addon/commons.scss
+++ b/blog/_sass/addon/commons.scss
@@ -721,8 +721,8 @@ $sidebar-display: 'sidebar-display';
   overflow-y: auto;
   width: $sidebar-width;
   z-index: 99;
-  /*background: var(--sidebar-bg);*/
-  background: url(https://www.hdwallpapers.in/download/purple_glitter_stones_background_hd_purple-1920x1080.jpg);
+  background: var(--sidebar-bg);
+  /*background: url();*/
 
   /* Hide scrollbar for Chrome, Safari and Opera */
   &::-webkit-scrollbar {
