--- a/blog/_includes/comments/flarum.html
+++ b/blog/_includes/comments/flarum.html
@@ -1,3 +1,3 @@
 <div id="flarum-comments">
-    <iframe id="flarum-frame" src="{{ site.comments.flarum.address }}/d/{{ post.flarum_id }}/embed"></iframe>
+    <iframe id="flarum-frame" src="{{ site.comments.flarum.address }}/d/{{ page.flarum_id }}/embed"></iframe>
 </div>
