--- a/blog/_includes/comments/flarum.html
+++ b/blog/_includes/comments/flarum.html
@@ -1,1 +1,1 @@
-<iframe class="" width="100%" height="450" frameBorder="0" src="{{ site.comments.flarum.address }}/embed/{{ page.flarum_id }}"></iframe>
+<iframe class="" width="100%" height="450" frameBorder="0" src="{{ site.comments.flarum.address }}/d/{{ page.flarum_id }}"></iframe>
