--- a/blog/_includes/comments/flarum.html
+++ b/blog/_includes/comments/flarum.html
@@ -1,5 +1,2 @@
-<!--<iframe class="" width="100%" height="450" frameBorder="0" src="{{ site.comments.flarum.address }}/d/{{ page.flarum_id }}"></iframe>-->
-<object data="{{ site.comments.flarum.address }}/d/{{ page.flarum_id }}" width="100%" height="450">
-    <embed src="{{ site.comments.flarum.address }}/d/{{ page.flarum_id }}" width="100%" height="450"> </embed>
-    Error: Embedded data could not be displayed.
-</object>
+<!--<iframe width="100%" height="450" frameBorder="0" src="{{ site.comments.flarum.address }}/d/{{ page.flarum_id }}"></iframe>-->
+<a href="{{ site.comments.flarum.address }}/d/{{ page.flarum_id }}" target="_blank"><img src="https://cdn.cdnlogo.com/logos/f/88/flarum.svg" alt="Flarum"> Deixe seu comentário! </a>
