--- a/blog/_includes/comments/flarum.html
+++ b/blog/_includes/comments/flarum.html
@@ -1,2 +1,2 @@
 <!--<iframe width="100%" height="450" frameBorder="0" src="{{ site.comments.flarum.address }}/d/{{ page.flarum_id }}"></iframe>-->
-<a href="{{ site.comments.flarum.address }}/d/{{ page.flarum_id }}" target="_blank"><img src="https://cdn.cdnlogo.com/logos/f/88/flarum.svg" alt="Flarum"> Deixe seu comentário! </a>
+<a href="{{ site.comments.flarum.address }}/d/{{ page.flarum_id }}" target="_blank"><img src="https://cdn.cdnlogo.com/logos/f/88/flarum.svg" alt="Flarum" width="30%"> Deixe seu comentário! </a>
