--- a/blog/_includes/comments/flarum.html
+++ b/blog/_includes/comments/flarum.html
@@ -1,7 +1,8 @@
-<div id="flarum-comments">
+<div id="flarum-forum">
     <a href="{{ site.comments.flarum.address }}/d/{{ page.flarum_id }}" target="_blank">
         <img src="https://cdn.cdnlogo.com/logos/f/88/flarum.svg" alt="Flarum" width="20%">
-        <br>
-        <iframe width="100%" height="450" frameBorder="0" src="{{ site.comments.flarum.address }}/d/{{ page.flarum_id }}"></iframe>
     </a>
+    <div id="flarum-frame">
+        <iframe width="100%" height="450" frameBorder="0" src="{{ site.comments.flarum.address }}/d/{{ page.flarum_id }}"></iframe>
+    </div>
 </div>
