--- a/blog/_includes/comments/flarum.html
+++ b/blog/_includes/comments/flarum.html
@@ -2,15 +2,7 @@
     <a href="{{ site.comments.flarum.address }}/d/{{ page.flarum_id }}" target="_blank">
         <img src="https://cdn.cdnlogo.com/logos/f/88/flarum.svg" alt="Flarum" width="20%">
     </a>
-    <div id="iframeDiv" style="border-radius: 5px;margin-top: 5px;">
+    <div id="flarum-frame" style="border-radius: 5px;margin-top: 10px;">
         <iframe width="100%" height="450" frameBorder="0" src="{{ site.comments.flarum.address }}/d/{{ page.flarum_id }}"></iframe>
     </div>
 </div>
-
-<script>
-    var iframeDiv = document.getElementById("iframeDiv");
-
-    iframeDiv.addEventListener("click", function(e) {
-        window.location.href = document.getElementById("frame").src;
-    }, true);
-</script>
