--- a/blog/_includes/comments/flarum.html
+++ b/blog/_includes/comments/flarum.html
@@ -2,7 +2,7 @@
     <a href="{{ site.comments.flarum.address }}/d/{{ page.flarum_id }}" target="_blank">
         <img src="https://cdn.cdnlogo.com/logos/f/88/flarum.svg" alt="Flarum" width="20%">
     </a>
-    <div id="flarum-frame" style="border-radius: 5px;margin-top: 10px;">
-        <iframe width="100%" height="450" frameBorder="0" src="{{ site.comments.flarum.address }}/d/{{ page.flarum_id }}" onclick="window.open('{{ site.comments.flarum.address }}/d/{{ page.flarum_id }}', '_blank')"></iframe>
+    <div id="flarum-frame">
+        <iframe width="100%" height="450" frameBorder="0" src="{{ site.comments.flarum.address }}/d/{{ page.flarum_id }}" style="border-radius: 5px;margin-top: 10px;"></iframe>
     </div>
 </div>
