--- a/blog/_includes/comments/flarum.html
+++ b/blog/_includes/comments/flarum.html
@@ -3,10 +3,10 @@
         <img src="https://cdn.cdnlogo.com/logos/f/88/flarum.svg" alt="Flarum" width="20%">
     </a>
 <div>
-<iframe id="flarum-frame" width="100%" height="450" frameBorder="0" style="border-radius: 10px;margin-top: 10px;"></iframe>
+<iframe id="flarumFrame" width="100%" height="450" frameBorder="0" style="border-radius: 10px;margin-top: 10px;"></iframe>
 <script type="text/javascript">
     var iframeURL = '{{ site.comments.flarum.address }}/d/{{ page.flarum_id }}';
-    var iframeID = 'flarum-frame';
+    var iframeID = 'flarumFrame';
 
     function loadIframe(){
         //pre-authenticate
