--- a/blog/_includes/comments/flarum.html
+++ b/blog/_includes/comments/flarum.html
@@ -1,11 +1,9 @@
-<div id="flarum-forum">
-    <a href="{{ site.comments.flarum.address }}/d/{{ page.flarum_id }}" target="_blank">
-        <img src="https://cdn.cdnlogo.com/logos/f/88/flarum.svg" alt="Flarum" width="20%">
-    </a>
-<div>
+<a href="{{ site.comments.flarum.address }}/d/{{ page.flarum_id }}" target="_blank">
+    <img src="https://cdn.cdnlogo.com/logos/f/88/flarum.svg" alt="Flarum" width="20%">
+</a>
 <iframe id="flarumFrame" width="100%" height="450" frameBorder="0" style="border-radius: 10px;margin-top: 10px;"></iframe>
 <script type="text/javascript">
-    var iframeURL = '{{ site.comments.flarum.address }}/d/{{ page.flarum_id }}';
+    var iframeURL = "{{ site.comments.flarum.address }}/d/{{ page.flarum_id }}";
     var iframeID = 'flarumFrame';
 
     function loadIframe(){
