--- a/blog/_includes/comments/flarum.html
+++ b/blog/_includes/comments/flarum.html
@@ -1,22 +1,6 @@
 <a href="{{ site.comments.flarum.address }}/d/{{ page.flarum_id }}" target="_blank">
     <img src="https://cdn.cdnlogo.com/logos/f/88/flarum.svg" alt="Flarum" width="20%">
 </a>
-<iframe id="flarumFrame" width="100%" height="450" frameBorder="0" style="border-radius: 10px;margin-top: 10px;"></iframe>
-<script type="text/javascript">
-    var iframeURL = "{{ site.comments.flarum.address }}/d/{{ page.flarum_id }}";
-    var iframeID = 'flarumFrame';
-
-    function loadIframe(){
-        //pre-authenticate
-        var req = new XMLHttpRequest();
-        req.open("POST",this.iframeURL, false, "username", "password"); //use POST to safely send combination
-        req.send(null); //here you can pass extra parameters through
-
-        //setiFrame's SRC attribute
-        var iFrameWin = document.getElementById(this.iframeID);
-        iFrameWin.src = this.iframeURL + "?extraParameters=true";
-    }
-
-    //onload, call loadIframe() function
-    loadIframe();   
-</script>
+<details>
+    <iframe width="100%" height="450" frameBorder="0" src="{{ site.comments.flarum.address }}/d/{{ page.flarum_id }}" style="border-radius: 10px;margin-top: 10px;"></iframe>
+</details>
