--- a/blog/_includes/comments/flarum.html
+++ b/blog/_includes/comments/flarum.html
@@ -1,6 +1,5 @@
 <a href="{{ site.comments.flarum.address }}/d/{{ page.flarum_id }}" target="_blank">
     <img src="https://cdn.cdnlogo.com/logos/f/88/flarum.svg" alt="Flarum" width="20%">
+    <img src="https://grupovaldirsaraiva.com.br/wp-content/uploads/2022/11/Botao-clique-aqui-site.png" alt="Clique aqui!" width="20%">
 </a>
-<details>
-    <iframe width="100%" height="450" frameBorder="0" src="{{ site.comments.flarum.address }}/d/{{ page.flarum_id }}" style="border-radius: 10px;margin-top: 10px;"></iframe>
-</details>
+<iframe width="100%" height="450" frameBorder="0" src="{{ site.comments.flarum.address }}/d/{{ page.flarum_id }}" style="border-radius: 10px;margin-top: 10px;"></iframe>
