--- a/blog/_includes/comments/flarum.html
+++ b/blog/_includes/comments/flarum.html
@@ -1,4 +1,8 @@
-<a href="{{ site.comments.flarum.address }}/d/{{ page.flarum_id }}" target="_blank">
+<img src="https://media.tenor.com/C7JA4n2B0nIAAAAC/nem-vou-comentar-i-will-not-comment-either.gif" alt="Cauê Moura nem vou comentar">
+
+<h3>Não faça como o <b>Cauê Moura</b>, se cadastre no <a href="https://rauldipeas.flarum.cloud"><b>Flarum</b></a> e deixe o seu comentário, afinal de contas, você não tá vacilando a esse ponto, né?</h3>
+
+<a href="{{ site.comments.flarum.address }}/d/{{ page.flarum_id }}" target="_blank" st>
     <img src="https://cdn.cdnlogo.com/logos/f/88/flarum.svg" alt="Flarum" width="20%">
     <img src="https://grupovaldirsaraiva.com.br/wp-content/uploads/2022/11/Botao-clique-aqui-site.png" alt="Clique aqui!" width="20%">
 </a>
