--- a/blog/_includes/comments/flarum.html
+++ b/blog/_includes/comments/flarum.html
@@ -1,6 +1,6 @@
-<img src="https://media.tenor.com/C7JA4n2B0nIAAAAC/nem-vou-comentar-i-will-not-comment-either.gif" alt="Cauê Moura nem vou comentar">
+<img src="https://media.tenor.com/C7JA4n2B0nIAAAAC/nem-vou-comentar-i-will-not-comment-either.gif" alt="Cauê Moura nem vou comentar" style="text-align: center;">
 
-<h3>Não faça como o <b>Cauê Moura</b>, se cadastre no <a href="https://rauldipeas.flarum.cloud"><b>Flarum</b></a> e deixe o seu comentário, afinal de contas, você não tá vacilando a esse ponto, né?</h3>
+<h4>Não faça como o <b>Cauê Moura</b>, se cadastre no <a href="https://rauldipeas.flarum.cloud"><b>Flarum</b></a> e deixe o seu comentário, afinal de contas, você não tá vacilando a esse ponto, né?</h4>
 
 <a href="{{ site.comments.flarum.address }}/d/{{ page.flarum_id }}" target="_blank" st>
     <img src="https://cdn.cdnlogo.com/logos/f/88/flarum.svg" alt="Flarum" width="20%">
