--- a/blog/_includes/comments/flarum.html
+++ b/blog/_includes/comments/flarum.html
@@ -1,6 +1,6 @@
 <div style="text-align: center;border-radius: 10px;">
     <img src="https://media.tenor.com/C7JA4n2B0nIAAAAC/nem-vou-comentar-i-will-not-comment-either.gif" alt="Cauê Moura nem vou comentar">
-    <h4 style="margin-top: 20px;">Não faça como o <b>Cauê Moura</b>, se cadastre no <a href="https://rauldipeas.flarum.cloud" target="_blank"><b>Flarum</b></a> e deixe o seu comentário, afinal de contas, você não tá vacilando a esse ponto, né?</h4>
+    <h4 style="margin-top: 20px;">Não faça como o <b>Cauê Moura</b>, se cadastre no <a href="https://rauldipeas.flarum.cloud" target="_blank"><b>Flarum</b></a> e deixe seu comentário, afinal de contas, você não tá vacilando a esse ponto, né?</h4>
 </div>
 
 <a href="{{ site.comments.flarum.address }}/d/{{ page.flarum_id }}" target="_blank" st>
