--- a/blog/_includes/comments/flarum.html
+++ b/blog/_includes/comments/flarum.html
@@ -3,8 +3,8 @@
     <h4 style="margin-top: 20px;">Não faça como o <b>Cauê Moura</b>, se cadastre no <a href="https://rauldipeas.flarum.cloud" target="_blank"><b>Flarum</b></a> e deixe seu comentário, afinal de contas, você não tá vacilando a esse ponto, né?</h4>
 </div>
 
-<a href="{{ site.comments.flarum.address }}/embed/{{ page.flarum_id }}" target="_blank" st>
+<a href="{{ site.comments.flarum.address }}/d/{{ page.flarum_id }}" target="_blank" st>
     <img src="https://cdn.cdnlogo.com/logos/f/88/flarum.svg" alt="Flarum" width="20%">
     <img src="https://grupovaldirsaraiva.com.br/wp-content/uploads/2022/11/Botao-clique-aqui-site.png" alt="Clique aqui!" width="20%">
 </a>
-<iframe width="100%" height="500" frameBorder="0" src="{{ site.comments.flarum.address }}/embed/{{ page.flarum_id }}" style="border-radius: 10px;margin-top: 10px;"></iframe>
+<iframe width="100%" height="450" frameBorder="0" src="{{ site.comments.flarum.address }}/d/{{ page.flarum_id }}" style="border-radius: 10px;margin-top: 10px;"></iframe>
