--- a/blog/_includes/comments/telegram-comments.html
+++ b/blog/_includes/comments/telegram-comments.html
@@ -1,1 +1,1 @@
-<script async src="https://comments.app/js/widget.js?3" data-comments-app-website="{{ site.comments.telegram-comments.data-comments-app-website }}" data-limit="5" data-color="343638" data-dislikes="1" data-colorful="1"></script>
+<script async src="https://comments.app/js/widget.js?3" data-comments-app-website="{{ site.comments.telegram.website }}" data-limit="5" data-color="343638" data-dislikes="1" data-colorful="1"></script>
