--- a/blog/_includes/comments/discussbot.html
+++ b/blog/_includes/comments/discussbot.html
@@ -1,1 +1,2 @@
-<script async src="https://comments.app/js/widget.js?3" data-comments-app-website="{{ site.comments.discussbot.website }}" data-limit="5" data-color="343638" data-dislikes="1" data-colorful="1"></script>
+<!--<script async src="https://comments.app/js/widget.js?3" data-comments-app-website="{{ site.comments.discussbot.website }}" data-limit="5" data-color="343638" data-dislikes="1" data-colorful="1"></script>-->
+<script async src="https://comments.app/js/widget.js?3" data-comments-app-website="gExAcg-9" data-limit="5"></script>
