--- a/blog/_includes/topbar.html
+++ b/blog/_includes/topbar.html
@@ -67,4 +67,6 @@
     <span id="search-cancel" >{{ site.data.locales[site.lang].search.cancel }}</span>
   </div>
 
+  {% include rssapp.html %}
+
 </div>
