--- a/blog/_includes/topbar.html
+++ b/blog/_includes/topbar.html
@@ -67,6 +67,8 @@
     <span id="search-cancel" >{{ site.data.locales[site.lang].search.cancel }}</span>
   </div>
 
-  {% include rssapp.html %}
+  <div style="padding-bottom: 30px !important;">
+    {% include rssapp.html %}
+  </div>
 
 </div>
