--- a/blog/_includes/topbar.html
+++ b/blog/_includes/topbar.html
@@ -67,7 +67,7 @@
     <span id="search-cancel" >{{ site.data.locales[site.lang].search.cancel }}</span>
   </div>
 
-  <div style="padding-bottom: 30px !important;">
+  <div style="margin-bottom: 30px !important;">
     {% include rssapp.html %}
   </div>
 
