--- a/blog/_layouts/default.html
+++ b/blog/_layouts/default.html
@@ -24,6 +24,10 @@ layout: compress
 
     {% include topbar.html %}
 
+    <div style="margin-top: 50px;">
+      {% include rssapp.html %}
+    </div>
+
     <div id="main-wrapper" class="d-flex justify-content-center">
       <div id="main" class="container pl-xl-4 pr-xl-4">
         {{ content }}
