--- a/blog/_layouts/default.html
+++ b/blog/_layouts/default.html
@@ -24,7 +24,7 @@ layout: compress
 
     {% include topbar.html %}
 
-    <div style="margin-top: 50px;">
+    <div style="margin: 50px 300px;">
       {% include rssapp.html %}
     </div>
 
