--- a/blog/_layouts/page.html
+++ b/blog/_layouts/page.html
@@ -8,6 +8,7 @@ layout: default
 
   <!-- core -->
   <div id="core-wrapper" class="col-12 col-lg-11 col-xl-9 pr-xl-4">
+    {% include rssapp.html %}
     <div class="post pl-1 pr-1 pl-md-2 pr-md-2">
 
     {% capture _content %}
