--- a/blog/_includes/head.html
+++ b/blog/_includes/head.html
@@ -115,4 +115,9 @@
   {% endunless %}
 
   {% include counter.html %}
+
+  {% if page.comments and site.comments.active %}
+    {% capture path %}comments/{{ site.comments.active }}-head.html{% endcapture %}
+    {% include {{ path }} %}
+  {% endif %}
 </head>
