--- a/blog/_includes/comments/metype.html
+++ b/blog/_includes/comments/metype.html
@@ -1,6 +1,5 @@
 <!-- Page reactions widget -->
-<div id="metype-page-reactions-container" data-metype-account-id='{{ site.comments.metype.id }}' data-metype-host='https://www.metype.com/'>
-</div>
+<div id="metype-page-reactions-container" data-metype-account-id='{{ site.comments.metype.id }}' data-metype-host='https://www.metype.com/'></div>
 <script>
   talktype(function() {
     const metypeReactionsContainer = document.getElementById("metype-page-reactions-container");
@@ -11,7 +10,7 @@
 </script>
 
 <!-- Commenting widget -->
-<div id='metype-container' class='iframe-container' data-metype-account-id='{{ site.comments.metype.id }}' data-metype-host='https://www.metype.com/' data-metype-primary-color='#0000ff' data-metype-bg-color='#ffffff' data-metype-font-color='#4a4a4a'></div>
+<div id='metype-container' class='iframe-container' data-metype-account-id='{{ site.comments.metype.id }}' data-metype-host='https://www.metype.com/'></div>
 <script type='text/javascript'>
   var metypeContainer = document.getElementById("metype-container"),
     page_url = metypeContainer.getAttribute("data-metype-page-url");
