--- a/blog/_includes/comments/metype.html
+++ b/blog/_includes/comments/metype.html
@@ -10,7 +10,7 @@
 </script>
 
 <!-- Commenting widget -->
-<div id='metype-container' class='iframe-container' data-metype-account-id='{{ site.comments.metype.id }}' data-metype-host='https://www.metype.com/'></div>
+<div id='metype-container' class='iframe-container' data-metype-account-id='{{ site.comments.metype.id }}' data-metype-host='https://www.metype.com/' data-metype-primary-color='#0000ff' data-metype-bg-color='var(--main-bg)' data-metype-font-color='var(--text-color)'></div>
 <script type='text/javascript'>
   var metypeContainer = document.getElementById("metype-container"),
     page_url = metypeContainer.getAttribute("data-metype-page-url");
