--- a/blog/_includes/head.html
+++ b/blog/_includes/head.html
@@ -116,8 +116,8 @@
 
   {% include counter.html %}
 
-  {% if page.comments and site.comments.active %}
+  <!-- {% if page.comments and site.comments.active %}
     {% capture path %}comments/{{ site.comments.active }}-head.html{% endcapture %}
     {% include {{ path }} %}
-  {% endif %}
+  {% endif %} -->
 </head>
