--- a/blog/_includes/comments/giscus.html
+++ b/blog/_includes/comments/giscus.html
@@ -22,7 +22,7 @@
       "data-mapping": "{{ site.comments.giscus.mapping | default: 'pathname' }}",
       "data-reactions-enabled": "{{ site.comments.giscus.reactions_enabled | default: '1' }}",
       "data-emit-metadata": "0",
-      "data-theme": initTheme,
+      "data-theme": preferred_color_scheme,
       "data-input-position": "{{ site.comments.giscus.input_position | default: 'bottom' }}",
       "data-lang": "{{ site.comments.giscus.lang | default: lang }}",
       "crossorigin": "anonymous",
