--- a/blog/_includes/head.html
+++ b/blog/_includes/head.html
@@ -106,6 +106,11 @@
     <link rel="stylesheet" href="{{ site.data.assets[origin].magnific-popup.css | relative_url }}">
   {% endif %}
 
+  {% if page.layout == 'post' %}
+    <!-- Fediverse creator-->
+    <meta name="fediverse:creator" content="@raul_dipeas@mastodon.social">
+  {% endif %}
+
   <!-- JavaScript -->
 
   <script src="{{ site.data.assets[origin].jquery.js | relative_url }}"></script>
