--- a/social/_includes/footer.html
+++ b/social/_includes/footer.html
@@ -1,7 +1,7 @@
 <!-- footer start -->
 
 <footer class="site-footer">
-  <a class="subscribe" href="{{ "/feed.xml" | prepend: site.baseurl }}"> <span class="tooltip"> <i class="fa fa-rss"></i> Se inscreva!</span></a>
+  <a class="subscribe" href="{{ "/feed.xml" | prepend: site.baseurl }}"> <span class="tooltip"> <i class="fa fa-rss"></i> Me siga por RSS!</span></a>
     <div class="inner">
         <!--<section class="copyright">Todos os direitos autorais do conteúdo <a href="mailto:{{ site.email}}">{{ site.name }}</a> &copy; {{ site.time | date: '%Y' }} &bull; Todos os direitos reservados.</section>-->
         <!--<section class="poweredby">Feito com<a href="http://jekyllrb.com"> Jekyll</a></section>-->
